--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Bootstrap 101 Template</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="app.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container pt-5">
+    <div class="container pt-5" id="app">
       <div class="row mb-3">
         <div class="col">
           <h1>Cars application</h1>
@@ -30,41 +28,79 @@
         <div class="col-md-4">
           <div class="form-group">
             <label for="search">Find your car</label>
-            <input type="text" class="form-control" id="search" placeholder="Name, model...">
+            <input 
+              type="text" 
+              class="form-control" 
+              id="search" 
+              placeholder="Name, model..."
+              v-model="search"
+              >
+              {{ search }}
           </div>
           <hr>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-action pointer">12345</li>
-            <li class="list-group-item list-group-item-action pointer">12345</li>
-            <li class="list-group-item list-group-item-action pointer">12345</li>
-            <li class="list-group-item list-group-item-action pointer">12345</li>
+            <li 
+                v-for="(car, index) of filteredCars"
+                class="list-group-item list-group-item-action pointer"
+                @click="selectCar(index)"
+                :class="{'active':  selectedCarIndex === index}"
+                >
+                  {{ car.name }} - {{ car.model }}
+            </li>
           </ul>
         </div>
         <div class="col-md-8 pt-3">
           <div class="row">
             <div class="col-md-5">
-              <h2>Ford</h2>
-              <img src="images/ford.jpeg" alt="" class="rounded detailed-car-image">
+              <h2>{{ car.name }}</h2>
+              <img 
+                :src="car.image" 
+                :alt="car.name" 
+                class="rounded detailed-car-image">
             </div>
             <div class="col-md-7 pt-2">
               <h5>Car details</h5>
               <ul>
-                <li>Model - <strong>Focus</strong></li>
-                <li>Year - <strong>2015</strong></li>
-                <li>Owner - <strong>Max</strong></li>
+                <li>Model - <strong>{{ car.model }}</strong></li>
+                <li>Year - <strong>{{ car.year }}</strong></li>
+                <li>Owner - <strong>{{ car.owner }}</strong></li>
               </ul>
-              <p>+7 999 999 99 99</p>
-              <button class="btn btn-outline-success mr-3">Show phone</button>
+              <div class="phone-block">
+                <p v-if="phoneVisibility">{{ car.phone }}</p>
+              </div>
+              <button 
+                class="btn btn-outline-success mr-3" 
+                @click="phoneVisibility = !phoneVisibility"
+                v-text="phoneBtnText"
+                ></button>
               <button class="btn btn-primary">Buy</button>
             </div><!-- col-md-7 -->
         </div><!-- row -->
         </div><!-- col-md-8 -->
       </div><!-- row -->
+      <!--       Modal window -->
+      <div class="modal fade show" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Do you want to buy this car?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-backdrop fade show"></div>
     </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="app.js"></script>
   </body>
   </html>
