--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Bootstrap 101 Template</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="app.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="app.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,18 +73,28 @@
                 @click="phoneVisibility = !phoneVisibility"
                 v-text="phoneBtnText"
                 ></button>
-              <button class="btn btn-primary">Buy</button>
+              <button class="btn btn-primary" @click="modalVisibility = true">Buy</button>
             </div><!-- col-md-7 -->
         </div><!-- row -->
         </div><!-- col-md-8 -->
       </div><!-- row -->
       <!--       Modal window -->
-      <div class="modal fade show" tabindex="-1" role="dialog">
+      <div 
+        class="modal fade show" 
+        v-if="modalVisibility"
+        tabindex="-1" 
+        role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Do you want to buy this car?</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <button 
+                type="button" 
+                class="close" 
+                data-dismiss="modal" 
+                aria-label="Close"
+                @click="modalVisibility = false"
+              >
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -98,7 +108,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-backdrop fade show"></div>
+      <div class="modal-backdrop fade show" v-if="modalVisibility"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="app.js"></script>
