--- a/index.html
+++ b/index.html
@@ -73,10 +73,29 @@
                 @click="phoneVisibility = !phoneVisibility"
                 v-text="phoneBtnText"
                 ></button>
-              <button class="btn btn-primary" @click="modalVisibility = true">Buy</button>
+              <button 
+                class="btn btn-primary" 
+                @click="modalVisibility = true"
+              >Buy</button>
             </div><!-- col-md-7 -->
         </div><!-- row -->
         </div><!-- col-md-8 -->
+      </div><!-- row -->
+      <div class="row pt-3" v-if="logs.leght !== 0">
+        <div class="col-md-12">
+          <ul class="list-group">
+              <li
+                v-for="log in logs" 
+                class="list-group-item"
+                :class="{
+                  'list-group-item-secondary': log.type === 'cnl',
+                  'list-group-item-success': log.type === 'ok'
+                }"
+              >
+                {{ log.text }} {{ log.date | date }}
+              </li>
+          </ul>
+        </div>
       </div><!-- row -->
       <!--       Modal window -->
       <div 
@@ -99,11 +118,30 @@
               </button>
             </div>
             <div class="modal-body">
-              <p>Modal body text goes here.</p>
+              <p> Current car - <strong>{{ car.name }}</strong></p>
+              <ul>
+                <li>Model - <strong>{{ car.model }}</strong></li>
+                <li>Year - <strong>{{ car.year }}</strong></li>
+                <li>Owner - <strong>{{ car.owner }}</strong></li>
+              </ul>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button 
+                type="button" 
+                class="btn btn-primary"
+                @click="newOrder"
+              >
+                Buy
+              </button>              
+              <button 
+                type="button" 
+                class="btn btn-secondary" 
+                data-dismiss="modal"
+                @click="cancelOrder"
+
+              >
+                Cancel
+              </button>
             </div>
           </div>
         </div>
