--- a/index.html
+++ b/index.html
@@ -29,126 +29,132 @@
           <div class="form-group">
             <label for="search">Find your car</label>
             <input 
-              type="text" 
-              class="form-control" 
-              id="search" 
-              placeholder="Name, model..."
-              v-model="search"
-              >
-              {{ search }}
+            type="text" 
+            class="form-control" 
+            id="search" 
+            placeholder="Name, model..."
+            v-model="search"
+            >
+            {{ search }}
           </div>
           <hr>
           <ul class="list-group">
             <li 
-                v-for="(car, index) of filteredCars"
-                class="list-group-item list-group-item-action pointer"
-                @click="selectCar(index)"
-                :class="{'active':  selectedCarIndex === index}"
-                >
-                  {{ car.name }} - {{ car.model }}
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-8 pt-3">
-          <div class="row">
-            <div class="col-md-5">
-              <h2>{{ car.name }}</h2>
-              <img 
-                :src="car.image" 
-                :alt="car.name" 
-                class="rounded detailed-car-image">
-            </div>
-            <div class="col-md-7 pt-2">
-              <h5>Car details</h5>
-              <ul>
-                <li>Model - <strong>{{ car.model }}</strong></li>
-                <li>Year - <strong>{{ car.year }}</strong></li>
-                <li>Owner - <strong>{{ car.owner }}</strong></li>
-              </ul>
-              <div class="phone-block">
-                <p v-if="phoneVisibility">{{ car.phone }}</p>
-              </div>
-              <button 
-                class="btn btn-outline-success mr-3" 
-                @click="phoneVisibility = !phoneVisibility"
-                v-text="phoneBtnText"
-                ></button>
-              <button 
-                class="btn btn-primary" 
-                @click="modalVisibility = true"
-              >Buy</button>
-            </div><!-- col-md-7 -->
-        </div><!-- row -->
-        </div><!-- col-md-8 -->
-      </div><!-- row -->
-      <div class="row pt-3" v-if="logs.leght !== 0">
-        <div class="col-md-12">
-          <ul class="list-group">
-              <li
-                v-for="log in logs" 
-                class="list-group-item"
-                :class="{
-                  'list-group-item-secondary': log.type === 'cnl',
-                  'list-group-item-success': log.type === 'ok'
-                }"
-              >
-                {{ log.text }} {{ log.date | date }}
-              </li>
-          </ul>
-        </div>
-      </div><!-- row -->
-      <!--       Modal window -->
-      <div 
-        class="modal fade show" 
-        v-if="modalVisibility"
-        tabindex="-1" 
-        role="dialog">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">Do you want to buy this car?</h5>
-              <button 
-                type="button" 
-                class="close" 
-                data-dismiss="modal" 
-                aria-label="Close"
-                @click="modalVisibility = false"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p> Current car - <strong>{{ car.name }}</strong></p>
-              <ul>
-                <li>Model - <strong>{{ car.model }}</strong></li>
-                <li>Year - <strong>{{ car.year }}</strong></li>
-                <li>Owner - <strong>{{ car.owner }}</strong></li>
-              </ul>
-            </div>
-            <div class="modal-footer">
-              <button 
-                type="button" 
-                class="btn btn-primary"
-                @click="newOrder"
-              >
-                Buy
-              </button>              
-              <button 
-                type="button" 
-                class="btn btn-secondary" 
-                data-dismiss="modal"
-                @click="cancelOrder"
-
-              >
-                Cancel
-              </button>
-            </div>
-          </div>
-        </div>
+            v-for="(car, index) of filteredCars"
+            class="list-group-item list-group-item-action pointer"
+            @click="selectCar(index)"
+            :class="{'active':  selectedCarIndex === index}"
+            >
+            {{ car.name }} - {{ car.model }}
+          </li>
+        </ul>
       </div>
-      <div class="modal-backdrop fade show" v-if="modalVisibility"></div>
+      <div class="col-md-8 pt-3">
+        <div class="row">
+          <div class="col-md-5">
+            <h2>{{ car.name }}</h2>
+            <img 
+            :src="car.image" 
+            :alt="car.name" 
+            class="rounded detailed-car-image">
+          </div>
+          <div class="col-md-7 pt-2">
+            <h5>Car details</h5>
+            <ul>
+              <li>Model - <strong>{{ car.model }}</strong></li>
+              <li>Year - <strong>{{ car.year }}</strong></li>
+              <li>Owner - <strong>{{ car.owner }}</strong></li>
+            </ul>
+            <div class="phone-block">
+              <transition name="phone">
+                <p v-if="phoneVisibility">{{ car.phone }}</p>
+              </transition>
+            </div>
+            <button 
+            class="btn btn-outline-success mr-3" 
+            @click="phoneVisibility = !phoneVisibility"
+            v-text="phoneBtnText"
+            ></button>
+            <button 
+            class="btn btn-primary" 
+            @click="modalVisibility = true"
+            >Buy</button>
+          </div><!-- col-md-7 -->
+        </div><!-- row -->
+      </div><!-- col-md-8 -->
+    </div><!-- row -->
+    <div class="row pt-3" v-if="logs.leght !== 0">
+      <div class="col-md-12">
+        <ul class="list-group">
+          <li
+          v-for="log in logs" 
+          class="list-group-item"
+          :class="{
+          'list-group-item-secondary': log.type === 'cnl',
+          'list-group-item-success': log.type === 'ok'
+        }"
+        >
+        {{ log.text }} {{ log.date | date }}
+      </li>
+    </ul>
+  </div>
+</div><!-- row -->
+<!--       Modal window -->
+<transition name="modal">
+  <div 
+  class="modal fade show" 
+  v-if="modalVisibility"
+  tabindex="-1" 
+  role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Do you want to buy this car?</h5>
+        <button 
+        type="button" 
+        class="close" 
+        data-dismiss="modal" 
+        aria-label="Close"
+        @click="modalVisibility = false"
+        >
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-    <script src="app.js"></script>
-  </body>
+    <div class="modal-body">
+      <p> Current car - <strong>{{ car.name }}</strong></p>
+      <ul>
+        <li>Model - <strong>{{ car.model }}</strong></li>
+        <li>Year - <strong>{{ car.year }}</strong></li>
+        <li>Owner - <strong>{{ car.owner }}</strong></li>
+      </ul>
+    </div>
+    <div class="modal-footer">
+      <button 
+      type="button" 
+      class="btn btn-primary"
+      @click="newOrder"
+      >
+      Buy
+    </button>              
+    <button 
+    type="button" 
+    class="btn btn-secondary" 
+    data-dismiss="modal"
+    @click="cancelOrder"
+
+    >
+    Cancel
+  </button>
+</div>
+</div>
+</div>
+</div>
+</transition>
+<transition name="fade">
+  <div class="modal-backdrop fade show" v-if="modalVisibility"></div>
+</transition>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+<script src="app.js"></script>
+</body>
   </html>
